# rust-web-scraping

./: Cargo.toml
src/: copy.rs  main.rs  main.rs.bak  regex.txt
