[package]
name = "rust-web-scraping"
version = "0.1.0"
authors = ["ethiclesshacker <mailingadityavs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"]} 
tokio = { version = "1", features = ["full"] }
regex = "1"
error-chain = "*"
url = "*"

# select = "*"
# scraper = "*"
# prettytable-rs = "*"
